DNN-9998, DNN-10127: Issues 19. Broken UI in search result for multiple tags: What is broken?

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/style.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/style.less
@@ -182,6 +182,8 @@
                 width: 30%;
                 float: left;
                 margin: 0 10px;
+                text-overflow: ellipsis;
+                overflow: hidden;
                 p {
                     display: inline;
                     font-weight: bold;
